CI: For test data

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,11 @@ jobs:
           cd build
           ctest --output-on-failure
 
+      - name: Copy test data
+        run: |
+        mkdir -p build/data
+        cp -r tests/data/* build/data/
+
       # Optional: Coverage
       - name: Generate coverage
         run: |
