--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,8 +38,8 @@ jobs:
 
       - name: Copy test data
         run: |
-          mkdir -p build/data
-          cp -r tests/data/* build/data/
+          mkdir -p build/test_data
+          cp -r tests/test_data/* build/test_data/
 
       # Optional: Coverage
       - name: Generate coverage
